# Projekt3

./: .gitignore  .gitmodules  CMakeLists.txt  Projekt3.sln  Projekt3.vcxproj  Projekt3.vcxproj.filters  README.md  environment.yml  vcpkg.json
src/: binding.cpp  main.cpp  projekt3.h
